namespace java com.igool.rpc.db.model.thrift
struct ImagePhotoRel {
			1:i64 ipId,
			2:i32 imageId,
			3:i32 btdId,
			4:string photo,
			5:i32 orderNum,
			6:string url
	}